--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LV1 drugi put</string>
+    <string name="favorite">Favorite</string>
+    <string name="search">Search</string>
+    <string name="recent">Recent</string>
 </resources>
