--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Cinaeste</string>
-    <string name="favorite">Favorite</string>
+    <string name="favorite">Favorite Movies</string>
     <string name="search">Search</string>
     <string name="recent">Recent</string>
     <string name="zanr_filma">Genre</string>
